Closes #27, image uploading and saving sorta works

--- a/application/config.cfg
+++ b/application/config.cfg
@@ -1,3 +1,5 @@
 DEBUG = True
 ENV = "development"
 SECRET_KEY = "nevergonnagiveyouup"
+DL_URL_SMALL = "https://vegetablecnn-053e.onrender.com/v1/models/small"
+DL_URL_LARGE = "https://vegetablecnn-053e.onrender.com/v1/models/large"
