--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 application/static/images/* filter=lfs diff=lfs merge=lfs -text
 Docs/Screenshots/* filter=lfs diff=lfs merge=lfs -text
+temp_imgs/* filter=lfs diff=lfs merge=lfs -text
