--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,84 @@
+asttokens==2.4.1
 attrs==23.2.0
 beautifulsoup4==4.12.3
 blinker==1.7.0
+boto3==1.34.39
+botocore==1.34.39
 bs4==0.0.2
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
+comm==0.2.1
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
 exceptiongroup==1.2.0
+executing==2.0.1
 Flask==3.0.2
 Flask-Cors==4.0.0
 Flask-Reuploaded==1.4.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
+fonttools==4.48.1
 greenlet==3.0.3
 gunicorn==21.2.0
 h11==0.14.0
 idna==3.6
 importlib-metadata==7.0.1
+importlib-resources==6.1.1
 iniconfig==2.0.0
+ipykernel==6.29.2
+ipython==8.18.1
 itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.3
+jmespath==1.0.1
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+nest-asyncio==1.6.0
 numpy==1.26.4
 outcome==1.3.0.post0
 packaging==23.2
+pandas==2.2.0
+parso==0.8.3
+pexpect==4.9.0
 pillow==10.2.0
+platformdirs==4.2.0
 pluggy==1.4.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+pyparsing==3.1.1
 PySocks==1.7.1
 pytest==8.0.0
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+pytz==2024.1
+pyzmq==25.1.2
 requests==2.31.0
+s3transfer==0.10.0
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 SQLAlchemy==2.0.25
+stack-data==0.6.3
 tomli==2.0.1
+tornado==6.4
+traitlets==5.14.1
 trio==0.24.0
 trio-websocket==0.11.1
 typing_extensions==4.9.0
-urllib3==2.2.0
+tzdata==2023.4
+urllib3==1.26.18
+wcwidth==0.2.13
 Werkzeug==3.0.1
 wsproto==1.2.0
 WTForms==3.1.2
