--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ exceptiongroup==1.2.0
 executing==2.0.1
 Flask==3.0.2
 Flask-Cors==4.0.0
+Flask-Login==0.6.3
 Flask-Reuploaded==1.4.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
@@ -54,6 +55,7 @@ prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyarrow==15.0.0
 Pygments==2.17.2
 pyparsing==3.1.1
 PySocks==1.7.1
