--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asttokens==2.4.1
 attrs==23.2.0
+bcrypt==4.1.2
 beautifulsoup4==4.12.3
 blinker==1.7.0
 boto3==1.34.39
@@ -16,6 +17,7 @@ decorator==5.1.1
 exceptiongroup==1.2.0
 executing==2.0.1
 Flask==3.0.2
+Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-Reuploaded==1.4.0
