--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.3
 jmespath==1.0.1
+joblib==1.3.2
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 kiwisolver==1.4.5
@@ -68,12 +69,15 @@ pytz==2024.1
 pyzmq==25.1.2
 requests==2.31.0
 s3transfer==0.10.0
+scikit-learn==1.4.0
+scipy==1.12.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.5
 SQLAlchemy==2.0.25
 stack-data==0.6.3
+threadpoolctl==3.2.0
 tomli==2.0.1
 tornado==6.4
 traitlets==5.14.1
